Version 0.4.2

  User-visible changes:
   * Change: abort button to show statustip instead of tooltip

  Developer-visible changes:
   * Tweak --hosts support
     1. c/clive 0.4.6+/2.2.3+ print supported formats with --hosts
   * Cleanup README
     1. Better description
     2. Misc. other tweaks
   * abby.pro: include "QT += network xml"
     1. See README for the changed build instructions


Version 0.4.1
(July 11, 2009)

  User-visible changes:
   * Rollout experimental win32 binaries
   * Add: Help / Supported hosts
   * Fix: Preferences: various browse buttons
   * Tweak:
     1. Various messagebox texts
     2. Various status/tool tips
     3. Scan dialog (+new functions)
     4. RSS dialog
   * Enable/disable link list when download begins/ends
   * Change: Open "Add link" dialog if list is empty and "Download" is clicked
     1. This previously showed a messagebox telling user to add a link

  Developer-visible changes:
   * src/scandlg.cpp: Use static messagebox function instead


Version 0.4.0
(July 5, 2009)

  User-visible changes:
   * Add: Scan feature to scan *any* web pages for video links
     1. Supports regular Youtube links and embedded ones
     2. Above means that it can be used to grab videos from Youtube playlists
     3. Intended to replace clivescan utility (of the clive-utils project)
   * Add: Edit / Add / Paste (+key shortcut)
   * Add: Clear list (button +menu item)
   * Fix: RSS/Scan: Check for URL scheme in input link; insert if missing
   * Fix: RSS/Scan: Disabling HTTP proxy is now respected
   * Enable editing links in main window and RSS feed manager (double-click)
   * Enable/disable misc. widgets at start and end
   * Use 16x16 for all icons
   * Update misc. tooltip messages


Version 0.3.0
(June 21, 2009)

FOREWORD

It is now also possible to download multiple videos on one go.
This was previously limited by design.

We are in the process of merging clive-utils into abby. RSS feed